--- a/my-project/src/index.css
+++ b/my-project/src/index.css
@@ -10,3 +10,48 @@ body {
   font-family: "Baloo2";
   src: url("./assets/fonts/Baloo2-VariableFont_wght.ttf");
 }
+
+.flip-container {
+  -webkit-perspective: 1000;
+  background: transparent;
+}
+/* flip the picture when hover */
+
+.flip-container:hover .flipper,
+.flip-container.hover .flipper {
+  -webkit-transform: rotateY(180deg);
+}
+
+.flip-container,
+.front,
+.back {
+  margin-right: 1rem;
+  width: 192px;
+  height: 192px;
+}
+/* flip speed */
+
+.flipper {
+  -webkit-transition: 1.2s;
+  -webkit-transform-style: preserve-3d;
+  position: relative;
+}
+/* hide back  during flip */
+
+.front,
+.back {
+  -webkit-backface-visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+/* front placed above back */
+
+.front {
+  z-index: 2;
+}
+/* back, initially hidden */
+
+.back {
+  -webkit-transform: rotateY(180deg);
+}
