--- a/my-project/src/index.css
+++ b/my-project/src/index.css
@@ -12,14 +12,14 @@ body {
 }
 
 .flip-container {
-  -webkit-perspective: 1000;
+  perspective: 1000;
   background: transparent;
 }
-/* flip the picture when hover */
 
+/* flip the picture when hover */
 .flip-container:hover .flipper,
 .flip-container.hover .flipper {
-  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 .flip-container,
@@ -29,29 +29,29 @@ body {
   width: 192px;
   height: 192px;
 }
-/* flip speed */
 
+/* flip speed */
 .flipper {
-  -webkit-transition: 1.2s;
-  -webkit-transform-style: preserve-3d;
+  transition: 1.2s;
+  transform-style: preserve-3d;
   position: relative;
 }
-/* hide back  during flip */
 
+/* hide back during flip */
 .front,
 .back {
-  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
   position: absolute;
   top: 0;
   left: 0;
 }
-/* front placed above back */
 
+/* front placed above back */
 .front {
   z-index: 2;
 }
-/* back, initially hidden */
 
+/* back, initially hidden */
 .back {
-  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
